<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="vn.gomisellers.apps.main.mypage.info.basic.AccountInfoViewModel" />
    </data>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="0dp"
        app:cardElevation="2dp">

        <LinearLayout
            requestFocus="@{viewModel.changeInfoFocus}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/padding_xlarge"
            android:visibility="@{viewModel.changeInfoHide?View.GONE:View.VISIBLE}">

            <!--Full name-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textAppearance="?android:textAppearance"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/text_size_small" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_medium"
                app:hintEnabled="false"
                app:setError="@{viewModel.fullNameError}"
                app:setErrorEnabled="@{viewModel.fullNameErrorEnable}">

                <EditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:afterTextChanged="@{(s) -> viewModel.afterFullNameChanged(s)}"
                    android:hint="@string/hint_name"
                    android:inputType="textCapWords"
                    android:singleLine="true"
                    android:text="@={viewModel.fullName}"
                    android:textAppearance="?android:textAppearance"
                    app:requestFocus="@{viewModel.fullNameFocus}" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--Ngày sinh-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/birthday"
                android:textAppearance="?android:textAppearance"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/text_size_small" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_medium"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:hintEnabled="false">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:hint="@string/hint_birthday"
                        android:singleLine="true"
                        android:text="@{viewModel.birthday}"
                        android:textAppearance="?android:textAppearance" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    style="@style/AppTheme.ButtonOutline"
                    android:layout_width="@dimen/button_width_108"
                    android:layout_height="@dimen/button_height_small"
                    android:onClick="@{(v)->viewModel.changeBirthday()}"
                    android:text="@string/btn_change" />

            </LinearLayout>

            <!--Giới tính-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_xsmall"
                android:text="@string/gender"
                android:textAppearance="?android:textAppearance"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/text_size_small" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_medium"
                android:background="@drawable/bg_location">

                <Spinner
                    setGenderAdapter="@{viewModel.genderAdapter}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorAccent"
                    android:onItemSelected="@{(p, v, pos, id) -> viewModel.onItemSelected(pos)}"
                    app:setSelect="@{viewModel.gender}"
                    tools:listitem="@android:layout/simple_spinner_item" />
            </RelativeLayout>

            <!--User name-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Email"
                android:textAppearance="?android:textAppearance"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/text_size_small" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_medium"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:text="@{viewModel.email}"
                    android:textAppearance="?android:textAppearance" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--Phone Number-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textAppearance="?android:textAppearance"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/text_size_small" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_medium"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_layout_phone_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:hintEnabled="false">

                    <vn.gomisellers.apps.widgets.PrefixEditText
                        android:id="@+id/input_phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:hint="@string/hint_phone_number"
                        android:singleLine="true"
                        android:text="@{viewModel.phoneNumber}"
                        android:textAppearance="?android:textAppearance" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btn_update_info"
                style="@style/AppTheme.ButtonPrimary"
                android:layout_width="@dimen/button_width_180"
                android:layout_height="wrap_content"
                android:enabled="@{viewModel.updateEnable}"
                android:onClick="@{(v)->viewModel.update()}"
                android:text="@string/btn_complete" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>