<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="vn.gomisellers.apps.main.mypage.info.password.ChangePasswordViewModel" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="0dp"
        app:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/padding_xlarge">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_old_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_medium"
                app:passwordToggleEnabled="true"
                app:setError="@{viewModel.oldPasswordError}"
                app:setErrorEnabled="@{viewModel.oldPasswordErrorEnable}">

                <EditText
                    android:id="@+id/input_old_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:afterTextChanged="@{(s) -> viewModel.afterPasswordChanged()}"
                    android:hint="@string/hint_old_password"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:text="@={viewModel.oldPassword}"
                    android:textAppearance="?android:textAppearance"
                    app:requestFocus="@{viewModel.oldPasswordFocus}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_medium"
                app:passwordToggleEnabled="true"
                app:setError="@{viewModel.newPasswordError}"
                app:setErrorEnabled="@{viewModel.newPasswordErrorEnable}">

                <EditText
                    android:id="@+id/input_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:afterTextChanged="@{(s) -> viewModel.afterPasswordChanged()}"
                    android:hint="@string/hint_new_password"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:text="@={viewModel.newPassword}"
                    android:textAppearance="?android:textAppearance"
                    app:requestFocus="@{viewModel.newPasswordFocus}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_medium"
                app:passwordToggleEnabled="true"
                app:setError="@{viewModel.confirmPasswordError}"
                app:setErrorEnabled="@{viewModel.confirmPasswordErrorEnable}">

                <EditText
                    android:id="@+id/input_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:afterTextChanged="@{(s) -> viewModel.afterPasswordChanged()}"
                    android:hint="@string/hint_confirm_password"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:text="@={viewModel.confirmPassword}"
                    android:textAppearance="?android:textAppearance"
                    app:requestFocus="@{viewModel.confirmPasswordFocus}" />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btn_change_password"
                style="@style/AppTheme.ButtonPrimary"
                android:layout_width="@dimen/button_width_180"
                android:layout_height="wrap_content"
                android:enabled="@{viewModel.changePasswordEnable}"
                android:onClick="@{(v)->viewModel.changePassword()}"
                android:text="@string/btn_complete" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>